// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputGroup default match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua500": "#76bde8",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#cceeff",
          "blue200": "#99d8ff",
          "blue400": "#3fa4ff",
          "blue500": "#007aff",
          "blue600": "#005edb",
          "blue900": "#00237a",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple500": "#aa5b9c",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise500": "#00a8be",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <InputGroup
        hideInputsLabel="Hide inputs"
        inputs={
          Array [
            Object {
              "label": "Lorem ipsum",
              "name": "lorem",
            },
            Object {
              "label": "Lorem ipsum 2",
              "name": "lorem2",
            },
            Object {
              "label": "Lorem ipsum 3",
              "name": "lorem3",
            },
          ]
        }
        isReadOnly={false}
        label="Lorem ipsum"
        labelMode="horizontal"
        onChange={[Function]}
        overrides={Object {}}
        showInputsLabel="Show inputs"
        value={Object {}}
      >
        <div
          className="HoiPoi__InputGroup__root-1-0 HoiPoi__InputGroup__horizontal-1-6"
        >
          <div
            className="HoiPoi__InputGroup__formControl-1-2"
          >
            <InputControl
              isReadOnly={false}
              label="Lorem ipsum"
              labelMode="horizontal"
              name="lorem"
              onBlur={[Function]}
              onChange={[Function]}
              onEnter={[Function]}
              onFocus={[Function]}
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum"
                labelMode="horizontal"
                name="lorem"
                onBlur={[Function]}
                onChange={[Function]}
                onEnter={[Function]}
                onFocus={[Function]}
                override={Object {}}
                type="text"
                value=""
              >
                <div
                  className="HoiPoi__Input__root-1-8 HoiPoi__Input__horizontal-1-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-1-9"
                  >
                    <span
                      className="HoiPoi__Label__root-1-30 HoiPoi__Input__Label-1-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-1-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-1-34 HoiPoi__Label__Text-1-31"
                        >
                          Lorem ipsum
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-1-12"
                  >
                    <input
                      className="HoiPoi__Input__input-1-13"
                      name="lorem"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
            </InputControl>
            <Link
              onClick={[Function]}
              overrides={Object {}}
              size="small"
            >
              <button
                className="HoiPoi__Link__root-1-45 HoiPoi__Link__small-1-49"
                onClick={[Function]}
                type="button"
              >
                Show inputs
              </button>
            </Link>
          </div>
          <div
            className="HoiPoi__InputGroup__inputsControl-1-3 HoiPoi__InputGroup__hidden-1-7"
          >
            <InputControl
              isReadOnly={false}
              key="lorem2"
              label="Lorem ipsum 2"
              labelMode="horizontal"
              name="lorem2"
              onChange={[Function]}
              overrides={
                Object {
                  "Label": Object {
                    "classes": Object {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                    },
                  },
                }
              }
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum 2"
                labelMode="horizontal"
                name="lorem2"
                onBlur={[Function]}
                onChange={[Function]}
                override={Object {}}
                overrides={
                  Object {
                    "Label": Object {
                      "classes": Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                      },
                    },
                  }
                }
                type="text"
                value=""
              >
                <div
                  className="HoiPoi__Input__root-1-8 HoiPoi__Input__horizontal-1-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-1-9"
                    classes={
                      Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                      }
                    }
                  >
                    <span
                      className="HoiPoi__Label__root-1-30 HoiPoi__Input__Label-1-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-1-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-1-34 HoiPoi__Label__Text-1-31"
                        >
                          Lorem ipsum 2
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-1-12"
                  >
                    <input
                      className="HoiPoi__Input__input-1-13"
                      name="lorem2"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
            </InputControl>
            <InputControl
              isReadOnly={false}
              key="lorem3"
              label="Lorem ipsum 3"
              labelMode="horizontal"
              name="lorem3"
              onChange={[Function]}
              overrides={
                Object {
                  "Label": Object {
                    "classes": Object {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                    },
                  },
                }
              }
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum 3"
                labelMode="horizontal"
                name="lorem3"
                onBlur={[Function]}
                onChange={[Function]}
                override={Object {}}
                overrides={
                  Object {
                    "Label": Object {
                      "classes": Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                      },
                    },
                  }
                }
                type="text"
                value=""
              >
                <div
                  className="HoiPoi__Input__root-1-8 HoiPoi__Input__horizontal-1-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-1-9"
                    classes={
                      Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                      }
                    }
                  >
                    <span
                      className="HoiPoi__Label__root-1-30 HoiPoi__Input__Label-1-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-1-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-1-34 HoiPoi__Label__Text-1-31"
                        >
                          Lorem ipsum 3
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-1-12"
                  >
                    <input
                      className="HoiPoi__Input__input-1-13"
                      name="lorem3"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
            </InputControl>
          </div>
        </div>
      </InputGroup>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`InputGroup is disabled match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua500": "#76bde8",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#cceeff",
          "blue200": "#99d8ff",
          "blue400": "#3fa4ff",
          "blue500": "#007aff",
          "blue600": "#005edb",
          "blue900": "#00237a",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple500": "#aa5b9c",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise500": "#00a8be",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <InputGroup
        hideInputsLabel="Hide inputs"
        inputs={
          Array [
            Object {
              "label": "Lorem ipsum",
              "name": "lorem",
            },
            Object {
              "label": "Lorem ipsum 2",
              "name": "lorem2",
            },
            Object {
              "label": "Lorem ipsum 3",
              "name": "lorem3",
            },
          ]
        }
        isDisabled={true}
        isReadOnly={false}
        label="Lorem ipsum"
        labelMode="horizontal"
        onChange={[Function]}
        overrides={Object {}}
        showInputsLabel="Show inputs"
        value={Object {}}
      >
        <div
          className="HoiPoi__InputGroup__root-2-0 HoiPoi__InputGroup__horizontal-2-6"
        >
          <div
            className="HoiPoi__InputGroup__formControl-2-2"
          >
            <InputControl
              isReadOnly={false}
              label="Lorem ipsum"
              labelMode="horizontal"
              name="lorem"
              onBlur={[Function]}
              onChange={[Function]}
              onEnter={[Function]}
              onFocus={[Function]}
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum"
                labelMode="horizontal"
                name="lorem"
                onBlur={[Function]}
                onChange={[Function]}
                onEnter={[Function]}
                onFocus={[Function]}
                override={Object {}}
                type="text"
                value=""
              >
                <div
                  className="HoiPoi__Input__root-2-8 HoiPoi__Input__horizontal-2-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-2-9"
                  >
                    <span
                      className="HoiPoi__Label__root-2-30 HoiPoi__Input__Label-2-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-2-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-2-34 HoiPoi__Label__Text-2-31"
                        >
                          Lorem ipsum
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-2-12"
                  >
                    <input
                      className="HoiPoi__Input__input-2-13"
                      name="lorem"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
            </InputControl>
            <Link
              onClick={[Function]}
              overrides={Object {}}
              size="small"
            >
              <button
                className="HoiPoi__Link__root-2-45 HoiPoi__Link__small-2-49"
                onClick={[Function]}
                type="button"
              >
                Show inputs
              </button>
            </Link>
          </div>
          <div
            className="HoiPoi__InputGroup__inputsControl-2-3 HoiPoi__InputGroup__hidden-2-7"
          >
            <InputControl
              isReadOnly={false}
              key="lorem2"
              label="Lorem ipsum 2"
              labelMode="horizontal"
              name="lorem2"
              onChange={[Function]}
              overrides={
                Object {
                  "Label": Object {
                    "classes": Object {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                    },
                  },
                }
              }
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum 2"
                labelMode="horizontal"
                name="lorem2"
                onBlur={[Function]}
                onChange={[Function]}
                override={Object {}}
                overrides={
                  Object {
                    "Label": Object {
                      "classes": Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                      },
                    },
                  }
                }
                type="text"
                value=""
              >
                <div
                  className="HoiPoi__Input__root-2-8 HoiPoi__Input__horizontal-2-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-2-9"
                    classes={
                      Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                      }
                    }
                  >
                    <span
                      className="HoiPoi__Label__root-2-30 HoiPoi__Input__Label-2-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-2-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-2-34 HoiPoi__Label__Text-2-31"
                        >
                          Lorem ipsum 2
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-2-12"
                  >
                    <input
                      className="HoiPoi__Input__input-2-13"
                      name="lorem2"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
            </InputControl>
            <InputControl
              isReadOnly={false}
              key="lorem3"
              label="Lorem ipsum 3"
              labelMode="horizontal"
              name="lorem3"
              onChange={[Function]}
              overrides={
                Object {
                  "Label": Object {
                    "classes": Object {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                    },
                  },
                }
              }
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum 3"
                labelMode="horizontal"
                name="lorem3"
                onBlur={[Function]}
                onChange={[Function]}
                override={Object {}}
                overrides={
                  Object {
                    "Label": Object {
                      "classes": Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                      },
                    },
                  }
                }
                type="text"
                value=""
              >
                <div
                  className="HoiPoi__Input__root-2-8 HoiPoi__Input__horizontal-2-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-2-9"
                    classes={
                      Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                      }
                    }
                  >
                    <span
                      className="HoiPoi__Label__root-2-30 HoiPoi__Input__Label-2-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-2-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-2-34 HoiPoi__Label__Text-2-31"
                        >
                          Lorem ipsum 3
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-2-12"
                  >
                    <input
                      className="HoiPoi__Input__input-2-13"
                      name="lorem3"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
            </InputControl>
          </div>
        </div>
      </InputGroup>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`InputGroup with values match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua500": "#76bde8",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#cceeff",
          "blue200": "#99d8ff",
          "blue400": "#3fa4ff",
          "blue500": "#007aff",
          "blue600": "#005edb",
          "blue900": "#00237a",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple500": "#aa5b9c",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise500": "#00a8be",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <InputGroup
        hideInputsLabel="Hide inputs"
        inputs={
          Array [
            Object {
              "label": "Lorem ipsum",
              "name": "lorem",
            },
            Object {
              "label": "Lorem ipsum 2",
              "name": "lorem2",
            },
            Object {
              "label": "Lorem ipsum 3",
              "name": "lorem3",
            },
          ]
        }
        isReadOnly={false}
        label="Lorem ipsum"
        labelMode="horizontal"
        onChange={[Function]}
        overrides={Object {}}
        showInputsLabel="Show inputs"
        value={
          Object {
            "lorem": true,
            "lorem3": true,
          }
        }
      >
        <div
          className="HoiPoi__InputGroup__root-3-0 HoiPoi__InputGroup__horizontal-3-6"
        >
          <div
            className="HoiPoi__InputGroup__formControl-3-2"
          >
            <InputControl
              isReadOnly={false}
              label="Lorem ipsum"
              labelMode="horizontal"
              name="lorem"
              onBlur={[Function]}
              onChange={[Function]}
              onEnter={[Function]}
              onFocus={[Function]}
              value={true}
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum"
                labelMode="horizontal"
                name="lorem"
                onBlur={[Function]}
                onChange={[Function]}
                onEnter={[Function]}
                onFocus={[Function]}
                override={Object {}}
                type="text"
                value={true}
              >
                <div
                  className="HoiPoi__Input__root-3-8 HoiPoi__Input__horizontal-3-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-3-9"
                  >
                    <span
                      className="HoiPoi__Label__root-3-30 HoiPoi__Input__Label-3-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-3-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-3-34 HoiPoi__Label__Text-3-31"
                        >
                          Lorem ipsum
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-3-12"
                  >
                    <input
                      className="HoiPoi__Input__input-3-13"
                      name="lorem"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value={true}
                    />
                    <div
                      className="HoiPoi__Input__postComponent-3-27"
                    >
                      <span
                        className="HoiPoi__Input__postCloseComponent-3-28 HoiPoi__Input__isClickable-3-19 HoiPoi__Input__clear-3-20"
                        onClick={[Function]}
                      >
                        <Icon
                          name="close"
                          overrides={Object {}}
                          size="medium"
                        >
                          <span
                            className="HoiPoi__Icon__root-3-45 HoiPoi__Icon__medium-3-47"
                          >
                            <Close
                              color="#788590"
                            >
                              <svg
                                viewBox="0 0 18 18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M9 7.409l7.08-7.08a1.125 1.125 0 1 1 1.59 1.591L10.591 9l7.08 7.08a1.125 1.125 0 1 1-1.591 1.59L9 10.591l-7.08 7.08A1.125 1.125 0 1 1 .33 16.08L7.409 9 .329 1.92A1.125 1.125 0 0 1 1.92.33L9 7.409z"
                                  fill="#788590"
                                  fillRule="nonzero"
                                />
                              </svg>
                            </Close>
                          </span>
                        </Icon>
                      </span>
                    </div>
                  </div>
                </div>
              </Input>
            </InputControl>
            <Link
              onClick={[Function]}
              overrides={Object {}}
              size="small"
            >
              <button
                className="HoiPoi__Link__root-3-52 HoiPoi__Link__small-3-56"
                onClick={[Function]}
                type="button"
              >
                Show inputs
              </button>
            </Link>
          </div>
          <div
            className="HoiPoi__InputGroup__inputsControl-3-3 HoiPoi__InputGroup__hidden-3-7"
          >
            <InputControl
              isReadOnly={false}
              key="lorem2"
              label="Lorem ipsum 2"
              labelMode="horizontal"
              name="lorem2"
              onChange={[Function]}
              overrides={
                Object {
                  "Label": Object {
                    "classes": Object {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                    },
                  },
                }
              }
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum 2"
                labelMode="horizontal"
                name="lorem2"
                onBlur={[Function]}
                onChange={[Function]}
                override={Object {}}
                overrides={
                  Object {
                    "Label": Object {
                      "classes": Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                      },
                    },
                  }
                }
                type="text"
                value=""
              >
                <div
                  className="HoiPoi__Input__root-3-8 HoiPoi__Input__horizontal-3-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-3-9"
                    classes={
                      Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                      }
                    }
                  >
                    <span
                      className="HoiPoi__Label__root-3-30 HoiPoi__Input__Label-3-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-3-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-3-34 HoiPoi__Label__Text-3-31"
                        >
                          Lorem ipsum 2
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-3-12"
                  >
                    <input
                      className="HoiPoi__Input__input-3-13"
                      name="lorem2"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
            </InputControl>
            <InputControl
              isReadOnly={false}
              key="lorem3"
              label="Lorem ipsum 3"
              labelMode="horizontal"
              name="lorem3"
              onChange={[Function]}
              overrides={
                Object {
                  "Label": Object {
                    "classes": Object {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                    },
                  },
                }
              }
              value={true}
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum 3"
                labelMode="horizontal"
                name="lorem3"
                onBlur={[Function]}
                onChange={[Function]}
                override={Object {}}
                overrides={
                  Object {
                    "Label": Object {
                      "classes": Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                      },
                    },
                  }
                }
                type="text"
                value={true}
              >
                <div
                  className="HoiPoi__Input__root-3-8 HoiPoi__Input__horizontal-3-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-3-9"
                    classes={
                      Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                      }
                    }
                  >
                    <span
                      className="HoiPoi__Label__root-3-30 HoiPoi__Input__Label-3-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-3-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-3-34 HoiPoi__Label__Text-3-31"
                        >
                          Lorem ipsum 3
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-3-12"
                  >
                    <input
                      className="HoiPoi__Input__input-3-13"
                      name="lorem3"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value={true}
                    />
                    <div
                      className="HoiPoi__Input__postComponent-3-27"
                    >
                      <span
                        className="HoiPoi__Input__postCloseComponent-3-28 HoiPoi__Input__isClickable-3-19 HoiPoi__Input__clear-3-20"
                        onClick={[Function]}
                      >
                        <Icon
                          name="close"
                          overrides={Object {}}
                          size="medium"
                        >
                          <span
                            className="HoiPoi__Icon__root-3-45 HoiPoi__Icon__medium-3-47"
                          >
                            <Close
                              color="#788590"
                            >
                              <svg
                                viewBox="0 0 18 18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M9 7.409l7.08-7.08a1.125 1.125 0 1 1 1.59 1.591L10.591 9l7.08 7.08a1.125 1.125 0 1 1-1.591 1.59L9 10.591l-7.08 7.08A1.125 1.125 0 1 1 .33 16.08L7.409 9 .329 1.92A1.125 1.125 0 0 1 1.92.33L9 7.409z"
                                  fill="#788590"
                                  fillRule="nonzero"
                                />
                              </svg>
                            </Close>
                          </span>
                        </Icon>
                      </span>
                    </div>
                  </div>
                </div>
              </Input>
            </InputControl>
          </div>
        </div>
      </InputGroup>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
